--- a/hunterxhunter/resume/style.css
+++ b/hunterxhunter/resume/style.css
@@ -1,5 +1,7 @@
 body{
     background-color:#D9D9D9;
+    width: 100vw;
+    height: 100vh;
 }
 .personal-information   {
     background-color: #5B8F8F;
@@ -214,6 +216,8 @@ body{
     top: 20px;
     right: 20px;
     box-shadow: 3px -3px 3px ;
+    
+    
 }
 .container1{
     text-align: top right;
